--- a/index.html
+++ b/index.html
@@ -35,6 +35,33 @@
             <li>Основы веб-дизайна</li>
         </ul>
     </div>
+    <div class="flex-container">
+        <p>Я активно изучаю новые технологии и инструменты, чтобы расширить свои возможности в веб-разработке. Вот некоторые из них:</p>
+        <p>If you going to San-Francisko</p>
+        <p>Еще какаято петушня</p>
+        <p>И снова седая ночь и только ей доверяю я и эта пэтушня</p>
+        <div class="flex-item">
+            <h3>HTML</h3>
+            <p>Основы разметки</p>
+        </div>
+        <div class="flex-item">
+            <h3>CSS</h3>
+            <p>mfnhglksjhl'jfgl/k</p>
+        </div>
+        <div class="flex-item">
+            <h3>php</h3>
+            <p>dhkddhgkhgkjgkjh d  </p>
+        </div>
+        <div class="flex-item">
+            <h3>Python</h3>
+            <p>dhgkihgkh dhgkjfhdgkjg</p>
+        </div>
+        <h2>Мои проекты</h2>
+        <ul>
+            <li><a href="https://example.com/project1">Проект 1</a> - Описание проекта 1.</li>
+            <li><a href="https://example.com/project2">Проект 2</a> - Описание проекта 2.</li>
+            <li><a href="https://example.com/project3">Проект 3</a> - Описание проекта 3.</li>
+        </ul>
     <div class="formaction">
         <form action="https://example.com/submit" method="post">
             <label for="name">Ваше имя:</label>
